# Minecraft-ToolBox

./: .gitignore  build.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/java/io/bambosan/mbloader/: Fallback.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/io/bambosan/mbloader/ui/theme/: Theme.kt
app/src/main/jni/: CMakeLists.txt  cheat-init.cpp  mc-init.cpp  xmake.lua
app/src/main/jni/include/shadowhook/: shadowhook.h
app/src/main/jni/src/Draw/: draw-init.cpp  draw-init.hpp
app/src/main/jni/src/Init/: Init.cpp  Init.hpp
app/src/main/jni/src/Log/: Log.hpp
app/src/main/jni/src/MemTool/: MemTool.cpp  MemTool.hpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
minecraft/: build.gradle
minecraft/src/main/java/com/mojang/minecraftpe/: FilePickerManagerHandler.kt  Launcher.kt  MainActivity.kt  NotificationListenerService.kt
minecraft/src/main/java/com/mojang/minecraftpe/store/: ExtraLicenseResponseData.kt  Product.kt  Purchase.kt  Store.kt  StoreListener.kt
minecraft/src/main/java/com/mojang/minecraftpe/store/amazonappstore/: AmazonAppStore.kt
minecraft/src/main/java/com/mojang/minecraftpe/store/googleplay/: GooglePlayStore.kt
